--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_BASE_URL = "http://54.179.36.174:8080/api/v1"
-VITE_BASE_URL = "http://13.215.193.189:8080/api/v1"
+# VITE_BASE_URL = "http://13.215.193.189:8080/api/v1"
+VITE_BASE_URL = "https://cfdcourses.cfdcircle.vn/api/v1"
